not pagination, but work version with mass adding, filter menu and other